# video_processing

./: CMakeLists.txt  Feature.cpp  Feature.h  GPUBase.cpp  GPUBase.h  GPUCode.cl  GPUImageProcessor.h  GPUTransferManager.h  SIFT.cpp  SIFT.h  SdkConsoleLog.txt  cmd_arg_reader.cpp  cmd_arg_reader.h  function.cpp  function.h  imgfeatures.cpp  imgfeatures.h  main.cpp  main2.cpp  sift2.cpp  sift2.h  sift_batch.cpp  sift_batch.h  stdafx.h  tchar.h  utils.cpp  utils.h
GPU/: AssignOrientations.cpp  CMakeLists.txt  ContextFilter.h  ContextFreeFilter.h  DetectExtrema.cpp  ExtractKeypointDescriptors.cpp  Filter.cpp  Filter.h  HighpassFilter.h  LinearFilter.h  LowpassFilter.h  MagnitudeOrientation.cpp  MeanFilter.cpp  NonLinearFilter.h  Subtract.cpp  Transformation.h
GPU/OpenCL/: CMakeLists.txt
